# instaui-mermaid

./: .gitignore  README.md  README.zh-CN.md  Taskfile.yml  pyproject.toml
.github/workflows/: instaui-mermaid.yml  main-playwright-cache.yml  mermaid-ci.yml  ruff-check.yml
__tests/: layout_testing_utils.py  screen.py  utils.py
__tests/testing_web/: conftest.py  context.py  server.py  test_mermaid.py
npm-mermaid/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
npm-mermaid/libs/: Mermaid.vue  index.ts  utils.ts
npm-mermaid/libs/hook/: clickable.ts  input.ts
npm-mermaid/scripts/: builder.py
npm-mermaid/types/instaui/: index.d.ts
src/instaui_mermaid/: __init__.py  _mermaid.py  instaui-mermaid.js
