[project]
name = "instaui-mermaid"
version = "0.1.2"
description = "A Python package for generating mermaid diagrams in InstaUI."
keywords = ["ui", "gui", "web", "instaui", "mermaid"]
readme = "README.md"
license = "MIT"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]

requires-python = ">=3.9,<3.14"
dependencies = [
    "instaui>=0.6.0",
]

[dependency-groups]
dev = [
    "instaui[web]",
    "playwright==1.48.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.1",
]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instaui_mermaid"]

[tool.hatch.build.targets.sdist]
only-include = ["src/instaui_mermaid"]
include = [
    "src/instaui_mermaid/static/**",
]

[tool.hatch.build.force-include]
"src/instaui_mermaid/static" = "src/instaui_mermaid/static"


